--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,8 @@ dependencies = [
     "sshkeyboard",
     "transformers",
     "pydantic",
-    "python-dotenv"
+    "python-dotenv",
+    "instructor[anthropic]"
 ]
 
 [project.urls]
